--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../pic/bgReg.jpg') ;
+    background-image: url('bgReg.jpg') ;
     background-attachment: scroll;
     background-size: 100%;
     background-repeat: no-repeat;
